--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,7 +2,7 @@
   z-index: 2;
   height: 80px;
   border-bottom: 1px solid #D1D2D6;
-  width: 100vw;
+  width: 100%;
   position: relative;
 }
 
@@ -106,7 +106,7 @@
   display: none;
 }
 
-@media screen and (max-width: 570px) {
+@media screen and (max-width: 700px) {
   .header {
     height: 56px;
   }
